<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:color="@android:color/black"
            android:text="@string/QuestionHeader"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Question1"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/answerQuestion1_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/imputAnswer_text"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Question2"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/answerQuestion2_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/imputAnswer_text"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Question3"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/answerQuestion3_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/imputAnswer_text"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Question4_Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Question4_Header"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/answerQuestion4_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="text"
                android:text="@string/imputAnswer_text"
                android:paddingLeft="4dp" />
        </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Question4"
                android:textSize="24sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Question5"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton5A" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton5B" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton5C" />

            <RadioButton
                android:id="@+id/radioButton5D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton5D" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Question6"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton6A" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton6B" />

            <RadioButton
                android:id="@+id/radioButton6C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton6C" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton6D" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Question7"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/CheckBox7A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CheckBox7A" />

        <CheckBox
            android:id="@+id/CheckBox7B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CheckBox7B" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CheckBox7C" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CheckBox7D" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Question8"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton8A" />

            <RadioButton
                android:id="@+id/radioButton8B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton8B" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton8C" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton8D" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Question9"
            android:textSize="24sp" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CheckBox9A" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CheckBox9B" />

        <CheckBox
            android:id="@+id/CheckBox9C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CheckBox9C" />

        <CheckBox
            android:id="@+id/CheckBox9D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CheckBox9D" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Question10"
            android:textSize="24sp" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton10A" />

            <RadioButton
                android:id="@+id/radioButton10B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton10B" />

        </RadioGroup>


        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SubmitButton_text"
            android:onClick="submit"
            android:textSize="24sp" />

        <Button
            android:id="@+id/QuizSummary_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QuizSummaryButton_text"
            android:onClick="quizSummary"
            android:textSize="24sp" />



    </LinearLayout>
</ScrollView>